force-app/main/default/objects/Vendor_Assignment__c/Vendor_Assignment__c.object-meta.xml
<CustomObject>
    <label>Vendor Assignment</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Vendor Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>