force-app/main/default/objects/Vendor_Assignment__c/fields/Vendor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Amount__c</fullName>
    <formula>Project__r.Remaining_Project_Budget__c* Vendor_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>