force-app/main/default/objects/Vendor_Assignment__c/fields/Vendor_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select opportunity value to display the vendor opportunities.</errorMessage>
        <filterItems>
            <field>Vendor_Opportunity__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor_Opportunity__c</referenceTo>
    <relationshipLabel>Vendor Assignments</relationshipLabel>
    <relationshipName>Vendor_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>