force-app/main/default/objects/Vendor_Assignment__c/fields/Vendor_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Percentage__c</fullName>
    <label>Vendor Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>