force-app/main/default/objects/Vendor_Assignment__c/validationRules/Past_Vendor_Work_Start_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Vendor_Work_Start_Date_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Vendor_Work_Start_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Vendor Work Start Date cannot be in the past</errorMessage>
</ValidationRule>