force-app/main/default/objects/Vendor_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Supervisor_User__c</columns>
    <columns>Vendor_Category__c</columns>
    <columns>Vendor_Work_Start_Date__c</columns>
    <columns>Vendor_Work_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Completion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>